# smart_home_IDS

./: ARCHITECTURE.md  IMPLEMENTATION-SUMMARY.md  README.md  commit_message.txt  fix.py  review.py
backend/api/: main.py
backend/api/dependencies/: database.py
backend/api/middleware/: logging.py
backend/api/routers/: alerts.py  devices.py  flows.py  health.py  metrics.py  thresholds.py
backend/api/schemas/: alerts.py  common.py  devices.py  flows.py  thresholds.py
backend/api/tests/: conftest.py  test_endpoints.py  test_health.py
backend/api/websockets/: __init__.py
backend/docs/: api_docs.md
ids-monorepo/: .pre-commit-config.yaml  README.md  SETUP.md  docker-compose.yml
ids-monorepo/.github/workflows/: build.yml  lint.yml  test.yml
ids-monorepo/apps/backend/: pyproject.toml  requirements.txt
ids-monorepo/apps/backend/src/backend/: __init__.py  config.py  main.py
ids-monorepo/apps/backend/src/backend/database/: __init__.py  config.py  models.py  session.py
ids-monorepo/apps/backend/src/backend/routers/: __init__.py  alerts.py  auth.py  devices.py  health.py
ids-monorepo/apps/frontend/: package.json  pyproject.toml  tsconfig.json  vite.config.ts
ids-monorepo/apps/frontend/src/: app.tsx  index.css  main.tsx
ids-monorepo/apps/frontend/src/layouts/: header.tsx  layout.tsx  sidebar.tsx
ids-monorepo/apps/frontend/src/lib/: utils.ts
ids-monorepo/apps/frontend/src/pages/: alerts.tsx  dashboard.tsx  devices.tsx  models.tsx  settings.tsx
ids-monorepo/deployment/: README.md
ids-monorepo/deployment/mosquitto/config/: mosquitto.conf.example
ids-monorepo/deployment/scripts/: deploy.sh
ids-monorepo/docs/ARCHITECTURE/: system-architecture.md
ids-monorepo/docs/DEVOPs/: deployment.md
ids-monorepo/docs/EDGE/: raspberry-pi-setup.md
ids-monorepo/docs/IMPLEMENTATION/: DEPENDENCY-GRAPH.md  FINAL-MONOREPO-TREE.md  IMPLEMENTATION-CHECKLIST.md
ids-monorepo/docs/backend/: development.md
ids-monorepo/docs/frontend/: development.md
ids-monorepo/infra/docker/: Dockerfile.backend  Dockerfile.edge  Dockerfile.frontend  Dockerfile.websocket  docker-compose.yml
ids-monorepo/infra/pi-config/: README.md  docker-compose.arm64.yml
ids-monorepo/services/feature-extraction-service/: pyproject.toml  requirements.txt
ids-monorepo/services/feature-extraction-service/src/feature_extraction_service/: __init__.py  extractor.py  service.py
ids-monorepo/services/fusion-engine-service/: Dockerfile  pyproject.toml
ids-monorepo/services/fusion-engine-service/src/fusion_engine/: __init__.py  api_server.py  config.py  fusion_engine.py
ids-monorepo/services/fusion_engine/: README.md  pyproject.toml  requirements.txt
ids-monorepo/services/fusion_engine/src/fusion_engine/: config.py  engine.py
ids-monorepo/services/fusion_engine/tests/: test_engine.py
ids-monorepo/services/ml-inference-service/: Dockerfile  Dockerfile.arm64  README.md  pyproject.toml  requirements.txt
ids-monorepo/services/ml-inference-service/src/ml_inference_service/: __init__.py  api_server.py  config.py  inference_engine.py  main.py  mqtt_client.py  utils.py
ids-monorepo/services/packet-capture-service/: pyproject.toml  requirements.txt
ids-monorepo/services/packet-capture-service/src/packet_capture_service/: __init__.py  config.py  main.py  packet_capturer.py  packet_processor.py  service.py
ids-monorepo/shared/config/: .env.template  README.md  __init__.py  pyproject.toml  settings.py
ids-monorepo/shared/config/environments/: dev.yaml  edge.yaml  prod.yaml
ids-monorepo/shared/config/tests/: test_settings.py
shared/logging/: __init__.py  examples.py  hooks.py  middleware.py  setup.py  tracing.py
shared/logging/tests/: __init__.py  test_logging.py
shared/mqtt/: README.md  pyproject.toml
shared/mqtt/examples/: basic_pub_sub.py
shared/mqtt/src/shared_mqtt/: __init__.py  client.py  models.py  serializer.py  topics.py
shared/mqtt/tests/: test_mqtt.py
