[tool.poetry]
name = "backend"
version = "0.1.0"
description = "FastAPI backend for Smart Home IDS"
authors = ["Security Team <security@smarthome.ids>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = { extras = ["standard"], version = "^0.27.0" }
python-multipart = "^0.0.9"
pydantic = "^2.0"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.0" }
alembic = "^1.17.0"
asyncpg = "^0.29.0"
redis = "^5.0.0"
paho-mqtt = "^2.0"
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
python-dotenv = "^1.0.0"
structlog = "^23.1"
websockets = "^12.0"
ids-core = { path = "../../packages/ids-core", develop = true }
ids-schemas = { path = "../../packages/ids-schemas", develop = true }
ids-mqtt = { path = "../../packages/ids-mqtt", develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"