[tool.poetry]
name = "packet-capture-service"
version = "0.1.0"
description = "Packet capture service for edge IoT IDS"
authors = ["Security Team <security@smarthome.ids>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
scapy = "^2.5.0"
paho-mqtt = "^2.0"
pydantic = "^2.0"
redis = "^5.0"
asyncio-mqtt = "^0.16.1"
ids-core = { path = "../../packages/ids-core", develop = true }
ids-schemas = { path = "../../packages/ids-schemas", develop = true }
ids-mqtt = { path = "../../packages/ids-mqtt", develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"