[tool.poetry]
name = "ids-shared-config"
version = "0.1.0"
description = "Centralized configuration system for the IDS platform"
authors = ["Security Team <security@smarthome.ids>"]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.0.0"
pydantic-settings = "^2.0.0"
pyyaml = "^6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
